--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <!-- Third Party Styles -->
     <link rel="stylesheet" href="./lib/bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- Personal Styles -->
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
 
   </head>
   <body>
-    <h1>Getting Sassy</h1>
+    <h1>Gittin' Sassy</h1>
 
     <!-- Third Party Scripts -->
     <script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
