--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Jquery Todo</a>
+        <a class="navbar-brand" id="brand" href="#">Jquery Todo</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -42,7 +42,7 @@
       </div>
       <div class="row form-spacing">
         <div class="col-xs-12 text-center">
-          <button type="button" class="btn btn-primary btn-lg" id="add-todo-button">Add New Todo</button>
+          <button type="button" class="btn btn-primary btn-lg btn-warning" id="add-todo-button">Add New Todo</button>
         </div>
       </div>
     </div>
@@ -70,6 +70,9 @@
     <script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- Personal Scripts -->
+    <script type="text/javascript" src="./javascripts/firebase.js"></script>
+    <script type="text/javascript" src="./javascripts/crud.js"></script>
+    <script type="text/javascript" src="./javascripts/dom.js"></script>
     <script type="text/javascript" src="./javascripts/main.js"></script>
   </body>
 </html>
