--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="col-xs-8 col-xs-offset-2 main-container">
+  <div class="container col-xs-4 col-xs-offset-4" id="login-container">
+  <!-- creates a 4 row column in center of screen -->
+    <h3 class="text-center form-spacing">Todo App</h3>
+    <input type="email" id="inputEmail" class="form-control form-spacing" placeholder="EMAIL ADDRESS" required autofocus>
+    <input type="password" id="inputPassword" class="form-control form-spacing" placeholder="PASSWORD NOW!" required>
+    <input type="text" id="inputUsername" class="form-control form-spacing" placeholder="USERNAME" required>
+    <button class="btn btn-lg btn-warning col-xs-6" id="loginButton">Login</button>
+    <button class="btn btn-lg btn-primary col-xs-6" id="registerButton">Register</button>
+  </div>
+
+
+
+
+
+
+
+  <div class="col-xs-8 col-xs-offset-2 main-container hide">
     <div class="col-xs-12 new-container hide">
       <div class="row form-spacing">
         <div class="col-xs-12 text-center">
@@ -72,6 +88,8 @@
     <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- Personal Scripts -->
     <script type="text/javascript" src="./javascripts/firebase.js"></script>
+    <script type="text/javascript" src="./javascripts/auth.js"></script>
+    <script type="text/javascript" src="./javascripts/userCrud.js"></script>
     <script type="text/javascript" src="./javascripts/crud.js"></script>
     <script type="text/javascript" src="./javascripts/dom.js"></script>
     <script type="text/javascript" src="./javascripts/main.js"></script>
