added logout function

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 
   <div class="col-xs-8 col-xs-offset-2 main-container hide">
+  <div id="logout-container"></div>
     <div class="col-xs-12 new-container hide">
       <div class="row form-spacing">
         <div class="col-xs-12 text-center">
